# code_study

./: .gitignore  RAILWAY_DEPLOY.md  README.md  package-lock.json
.claude/: settings.local.json
.github/workflows/: ci.yml
.serena/: project.yml
backend/: Procfile  __init__.py  alembic.ini  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  test_document_generation.py
backend/alembic/: env.py
backend/alembic/versions/: 20241228_0001_initial_migration.py
backend/src/: __init__.py  main.py
backend/src/api/: __init__.py  auth.py  dependencies.py  documents.py  exceptions.py  projects.py  router.py  schemas.py  tasks.py
backend/src/db/: __init__.py  config.py  session.py
backend/src/models/: __init__.py  code_file.py  learning_document.py  project.py  refresh_token.py  task.py  uploaded_code.py  user.py
backend/src/services/: __init__.py  project_service.py  task_service.py
backend/src/services/ai/: __init__.py  gemini_client.py  prompts.py
backend/src/services/auth/: __init__.py  token_service.py  user_service.py
backend/src/services/code_analysis/: __init__.py  code_upload_service.py  complexity_analyzer.py  file_storage.py  language_detector.py
backend/src/services/document/: __init__.py  document_generation_service.py
backend/src/tasks/: __init__.py  celery_app.py
backend/src/utils/: file_validator.py  jwt.py  security.py
backend/tests/: __init__.py  conftest.py
backend/tests/unit/: test_db_config.py  test_dependencies.py  test_exceptions.py  test_file_validator.py  test_jwt.py  test_main.py  test_project_model.py  test_project_service.py  test_refresh_token_model.py  test_security.py  test_task_model.py  test_token_service.py  test_user_model.py  test_user_service.py
backend/tests/unit/api/: test_auth.py  test_documents.py  test_projects.py
backend/tests/unit/models/: test_learning_document.py
backend/tests/unit/services/: test_task_service.py
backend/tests/unit/services/code_analysis/: __init__.py  test_code_upload_service.py  test_complexity_analyzer.py  test_file_storage.py  test_language_detector.py
backend/tests/unit/services/document/: __init__.py  test_document_generation_service.py
backend/tests/unit/tasks/: __init__.py  test_celery_app.py
docs/architecture/: README.md  backend-architecture.md  database-erd.md  frontend-architecture.md  system-architecture.md
docs/task-reports/: TASK-001-009-project-setup.md  TASK-011-database-configuration.md  TASK-012-jwt-token-utilities.md  TASK-013-password-hashing-utilities.md  TASK-014-fastapi-app-initialization.md  TASK-015-api-router-structure.md  TASK-016-error-handling-middleware.md  TASK-017-celery-redis-setup.md  TASK-018-react-router-setup.md  TASK-019-tanstack-query-setup.md  TASK-020-api-client-base.md  TASK-021-zustand-auth-store.md  TASK-022-tailwind-shadcn-ui-setup.md  TASK-023-user-model.md  TASK-024-refresh-token-model.md  TASK-025-user-service.md  TASK-026-token-service.md  TASK-027-authentication-dependency.md  (+31 more)
docs/task-reports-new/: TASK-010-database-session.md
frontend/: .env.example  eslint.config.js  index.html  nixpacks.toml  package-lock.json  package.json  railway.toml  tsconfig.app.json  vite.config.ts
(+73 files in other folders)
