[project]
name = "ai-code-learning-platform-backend"
version = "0.1.0"
description = "AI Code Learning Platform - Backend API"
requires-python = ">=3.11"

[tool.black]
line-length = 88
target-version = ["py311"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | __pycache__
    | \.mypy_cache
    | \.pytest_cache
    | alembic/versions
)/
'''

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "S",      # flake8-bandit (security)
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by black)
    "S101",   # use of assert (needed for tests)
    "B904",   # raise ... from err (too many places to fix now)
    "B008",   # function call in default argument (FastAPI pattern)
    "S110",   # try-except-pass
    "S112",   # try-except-continue
    "RUF012", # mutable class attributes (intentional for configs)
    "RUF022", # __all__ sorting (grouped by category intentionally)
    "SIM102", # nested if (sometimes more readable)
    "SIM103", # return condition directly
    "SIM108", # ternary operator
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "S105", "S106", "B017", "RUF043", "F841", "SIM102"]
"alembic/**/*.py" = ["E402", "I001", "UP035"]
"test_*.py" = ["S101", "S105", "S106", "E402"]
"src/main.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
